--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,6 +10,7 @@ configuration:
 
 # Build with all those possible configurations
 environment:
+  COMPILER_VERSION: Visual Studio 2019 version 16.1
   matrix:
     - BUILD_RULES: -DUSE_OPFOR=1
 
