--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,5 @@
 # Use a VM with VS 2019
-os: Visual Studio 2019
+os: Visual Studio 2015
 
 # Only target Windows 32 bits
 platform: Win32
@@ -11,6 +11,7 @@ configuration:
 # Build with all those possible configurations
 environment:
   COMPILER_VERSION: Visual Studio 2019 version 16.1
+ # COMPILER_TOOLSET: v140_xp
   matrix:
     - BUILD_RULES: -DUSE_OPFOR=1
 
