--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,7 +11,7 @@ configuration:
 # Build with all those possible configurations
 environment:
   COMPILER_VERSION: Visual Studio 2019 version 16.1
- # COMPILER_TOOLSET: v140_xp
+  COMPILER_TOOLSET: v140_xp
   matrix:
     - BUILD_RULES: -DUSE_OPFOR=1
 
